feat: Java puzzles (ShowMeYourCodeYouTube/java-kotlin-playground!10)