@@ -2,6 +2,7 @@ package com.showmeyourcode.playground.java.code.paradigm.functional;
 
 import com.showmeyourcode.playground.kotlin.common.Descriptions;
 import io.vavr.control.Try;
+import lombok.extern.slf4j.Slf4j;
 
 import java.nio.file.Files;
 import java.nio.file.Paths;
@@ -20,14 +21,15 @@ import java.util.function.ToDoubleFunction;
 import java.util.function.ToIntFunction;
 import java.util.function.ToLongFunction;
 import java.util.function.UnaryOperator;
-import java.util.stream.Collectors;
 
-import static com.showmeyourcode.playground.java.LanguageOverview.LOGGER;
-
+@Slf4j
 public class FunctionalProgramming {
 
-    public static void main() {
-        LOGGER.info("\n{} {}", Descriptions.FUNCTIONAL_PROGRAMMING, Descriptions.INDENT1);
+    private FunctionalProgramming() {
+    }
+
+    public static void main(String[] args) {
+        log.info("\n{} {}", Descriptions.FUNCTIONAL_PROGRAMMING, Descriptions.INDENT1);
 
         HandleSideEffects.main();
         PureFunctionsAndExceptions.main();
@@ -40,11 +42,20 @@ public class FunctionalProgramming {
     }
 }
 
+@Slf4j
 class ReferentialTransparency {
+
+    private ReferentialTransparency() {
+    }
+
+    /**
+     * Referential transparency in programming refers to when a function is supplied with an input it will always return the same value for the given input supplied.
+     * Reference: <a href="https://stackoverflow.com/questions/210835/what-is-referential-transparency">What is referential transparency?</a>
+     */
     public static void main() {
         int result = add(2, 3) + add(2, 3);
         // Can be replaced with 5 + 5 without changing the program's behavior
-        System.out.println(result); // Output: 10
+        log.info("Referential transparency: {}", result); // Output: 10
     }
 
     public static int add(int x, int y) {
@@ -52,7 +63,12 @@ class ReferentialTransparency {
     }
 }
 
-class FunctionChains{
+@Slf4j
+class FunctionChains {
+
+    private FunctionChains() {
+    }
+
     public static void main(){
         // Function that doubles a number
         Function<Integer, Integer> doubleValue = x -> x * 2;
@@ -62,21 +78,26 @@ class FunctionChains{
 
         // Applying the doubleValue function
         Integer applyResult = doubleValue.apply(5);
-        System.out.println("Apply Result: " + applyResult); // Output: 10
+        log.info("Apply Result: {}", applyResult); // Output: 10
 
         // Composing functions: (x + 3) * 2
         Function<Integer, Integer> addThenDouble = doubleValue.compose(addThree);
         Integer composeResult = addThenDouble.apply(5);
-        System.out.println("Compose Result: " + composeResult); // Output: 16 ((5 + 3) * 2)
+        log.info("Compose Result: {}", composeResult); // Output: 16 ((5 + 3) * 2)
 
         // Composing functions: (x * 2) + 3
         Function<Integer, Integer> doubleThenAdd = doubleValue.andThen(addThree);
         Integer andThenResult = doubleThenAdd.apply(5);
-        System.out.println("AndThen Result: " + andThenResult); // Output: 13 ((5 * 2) + 3)
+        log.info("AndThen Result: {}", andThenResult); // Output: 13 ((5 * 2) + 3)
     }
 }
 
+@Slf4j
 class CurryUncurry{
+
+    private CurryUncurry() {
+    }
+
     public static void main(){
         currying();
         uncurrying();
@@ -92,7 +113,7 @@ class CurryUncurry{
         // Using the uncurried function
         Integer result = uncurriedAdd.apply(5, 3);
 
-        System.out.println("Uncurried Result: " + result); // Output: 8
+        log.info("Uncurried Result: {}", result); // Output: 8
     }
 
     private static void currying() {
@@ -106,11 +127,15 @@ class CurryUncurry{
         Function<Integer, Integer> addFive = curriedAdd.apply(5);
         Integer result = addFive.apply(3);
 
-        System.out.println("Curried Result: " + result); // Output: 8
+        log.info("Curried Result: {}", result); // Output: 8
     }
 }
 
+@Slf4j
 class StreamOperations{
+
+    private StreamOperations() {
+    }
 
     public static void main(){
         List<String> names = Arrays.asList("Alice", "Bob", "Charlie", "David", "Edward");
@@ -121,99 +146,109 @@ class StreamOperations{
                 .filter(name -> name.length() > 3)    // Intermediate operation
                 .map(String::toUpperCase)             // Intermediate operation
                 .sorted()                             // Intermediate operation
-                .collect(Collectors.toList());        // Terminal operation
+                .toList();        // Terminal operation
 
-        System.out.println(result); // Output: [ALICE, CHARLIE, DAVID, EDWARD]
+        log.info("Stream operator: {}", result); // Output: [ALICE, CHARLIE, DAVID, EDWARD]
 
         // Intermediate operation: peek (used to demonstrate the effect)
         // Terminal operation: forEach
         names.stream()
                 .filter(name -> name.length() > 3)    // Intermediate operation
                 .map(String::toUpperCase)             // Intermediate operation
-                .peek(System.out::println)            // Intermediate operation (side effect)
+                .peek(v ->log.info("Stream value(peek): {}", v))            // Intermediate operation (side effect)
                 .sorted()                             // Intermediate operation
                 .forEach(name -> {});                 // Terminal operation (triggers stream processing)
     }
 }
 
+@Slf4j
 class FunctionalInterfaces{
+
+    private FunctionalInterfaces() {
+    }
 
     public static void main(){
         functionalInterfaces();
     }
 
     private static void functionalInterfaces() {
-        // Predicate example
-        Predicate<String> isEmpty = String::isEmpty;
-        System.out.println("Predicate: " + isEmpty.test("")); // Output: true
-        System.out.println("Predicate: " + isEmpty.test("Hello")); // Output: false
-
-        // Consumer example
-        Consumer<String> print = System.out::println;
-        System.out.print("Consumer: ");
-        print.accept("Hello, World!"); // Output: Hello, World!
-
         // Function example
         Function<String, Integer> stringLength = String::length;
-        System.out.println("Function: " + stringLength.apply("Hello")); // Output: 5
+        log.info("Function: {}", stringLength.apply("Hello!")); // Output: 5
+
+        // Predicate example
+        Predicate<String> isEmpty = String::isEmpty;
+        log.info("Predicate: {}", isEmpty.test("")); // Output: true
+        log.info("Predicate: {}", isEmpty.test("Hello?")); // Output: false
+
+        // Consumer example
+        Consumer<String> print = v -> log.info("Consumer: {}", v);
+        print.accept("Hello, World!"); // Output: Hello, World!
 
         /* Supplier example */
         Supplier<String> supplier = () -> "Hello, World!";
-        System.out.println("Supplier: " + supplier.get()); // Output: Hello, World!
+        log.info("Supplier: {}", supplier.get()); // Output: Hello, World!
 
         // UnaryOperator example
         UnaryOperator<Integer> square = x -> x * x;
-        System.out.println("UnaryOperator: " + square.apply(5)); // Output: 25
+        log.info("UnaryOperator: {}", square.apply(5)); // Output: 25
 
         // BinaryOperator example
         BinaryOperator<Integer> sum = Integer::sum;
-        System.out.println("BinaryOperator: " + sum.apply(3, 7)); // Output: 10
+        log.info("BinaryOperator: {}", sum.apply(3, 7)); // Output: 10
 
         // BiPredicate example
         BiPredicate<String, String> startsWith = String::startsWith;
-        System.out.println("BiPredicate: " + startsWith.test("Hello", "He")); // Output: true
-        System.out.println("BiPredicate: " + startsWith.test("Hello", "Hi")); // Output: false
+        log.info("BiPredicate: {}", startsWith.test("Helloooo", "He")); // Output: true
+        log.info("BiPredicate: {}", startsWith.test("Helloo", "Hi")); // Output: false
 
         // BiConsumer example
         BiConsumer<String, Integer> printMultipleTimes = (str, num) -> {
-            System.out.println("BiConsumer: ");
             for (int i = 0; i < num; i++) {
-                System.out.println(str);
+                log.info("BiConsumer: {}", str);
             }
         };
-        printMultipleTimes.accept("Hello", 3); // Output: Hello (three times)
+        printMultipleTimes.accept("Hello everyone!", 3); // Output: Hello (three times)
 
         // BiFunction example
         BiFunction<String, String, Integer> compare = String::compareTo;
-        System.out.println("BiFunction: " + compare.apply("Hello", "World")); // Output: -15
+        log.info("BiFunction: {}", compare.apply("Hello", "World")); // Output: -15
 
         // ToIntFunction example
         ToIntFunction<String> length = String::length;
-        System.out.println("ToIntFunction: " + length.applyAsInt("Hello")); // Output: 5
+        log.info("ToIntFunction: {}", length.applyAsInt("Hello")); // Output: 5
 
         // ToDoubleFunction example
         ToDoubleFunction<String> parseDouble = Double::parseDouble;
-        System.out.println("ToDoubleFunction: " + parseDouble.applyAsDouble("42.0")); // Output: 42.0
+        log.info("ToDoubleFunction: {}", parseDouble.applyAsDouble("42.0")); // Output: 42.0
 
         // ToLongFunction example
         ToLongFunction<String> parseLong = Long::parseLong;
-        System.out.println("ToLongFunction: " + parseLong.applyAsLong("42")); // Output: 42
+        log.info("ToLongFunction: {}", parseLong.applyAsLong("42")); // Output: 42
     }
 }
 
+@Slf4j
 class StreamAPI{
+
+    private StreamAPI() {
+    }
 
     // The Stream API allows you to perform operations on collections in a functional style, such as map, filter, and reduce.
     public static void main(){
         List<Integer> numbers = Arrays.asList(1, 2, 3, 4, 5);
         List<Integer> squared = numbers.stream()
                 .map(x -> x * x)
-                .collect(Collectors.toList());
-        System.out.println(squared); // Output: [1, 4, 9, 16, 25]
+                .toList();
+        log.info("StreamAPI: {}",squared); // Output: [1, 4, 9, 16, 25]
     }
 }
 
+@Slf4j
 class HandleSideEffects {
+
+    private HandleSideEffects() {
+    }
 
     /**
      * In Java, a side effect occurs when a method modifies some state or interacts with the outside world
@@ -237,16 +272,20 @@ class HandleSideEffects {
 
     // Function that uses Vavr's Try to handle IO exceptions
     public static Try<List<String>> readFile(String filePath) {
-        return Try.of(() -> Files.lines(Paths.get(filePath)).collect(Collectors.toList()));
+        return Try.of(() -> Files.lines(Paths.get(filePath)).toList());
     }
 
     // Function with side effect (printing)
     public static void printLines(List<String> lines) {
-        lines.forEach(System.out::println);
+        lines.forEach(e -> log.info("print: {}", e));
     }
 }
 
+@Slf4j
 class PureFunctionsAndExceptions{
+
+    private PureFunctionsAndExceptions() {
+    }
 
     /**
      * Throwing an exception does not inherently disqualify a function from being pure.
@@ -256,15 +295,15 @@ class PureFunctionsAndExceptions{
      */
     public static void main(){
         try {
-            System.out.println(divide(10, 2)); // Output: 5.0
-            System.out.println(divide(10, 0)); // Throws ArithmeticException
+            log.info("{}", divide(10, 2)); // Output: 5.0
+            log.info("{}", divide(10, 0)); // Throws ArithmeticException
         } catch (ArithmeticException e) {
-            System.err.println(e.getMessage());
+            log.error("Calculation failed ", e);
         }
 
         // Refactoring with Functional Programming Principles
-        System.out.println(divideFunctional(10, 2).orElse(Double.NaN)); // Output: 5.0
-        System.out.println(divideFunctional(10, 0).orElse(Double.NaN)); // Output: NaN
+        log.info("{}", divideFunctional(10, 2).orElse(Double.NaN)); // Output: 5.0
+        log.info("{}", divideFunctional(10, 0).orElse(Double.NaN)); // Output: NaN
 
         // Or when an exception should be returned
         Result<Double> result1 = divideWithException(10, 2);
@@ -337,9 +376,9 @@ class PureFunctionsAndExceptions{
     // Function to handle the Result
     public static void handleResult(Result<Double> result) {
         if (result.isSuccess()) {
-            System.out.println("Result: " + result.getValue());
+            log.info("Result: {}", result.getValue());
         } else {
-            System.err.println("Error: " + result.getException().getMessage());
+            log.info("Error: {}", result.getException().getMessage());
         }
     }
 }
